# nof1-investigation

./: .gitignore  README.md  compute_model_win_probs.py  fetch_data.py  pyproject.toml  run_backtest.py
src/: plotting.py  simulation.py
