[project]
name = "nof1-investigation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.13",
    "darts>=0.38.0",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "ruff>=0.14.2",
]
